# cookiecutter-rust-derive

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .bumpversion.cfg  Cargo.toml
{{cookiecutter.project_name}}/derive/: Cargo.toml
{{cookiecutter.project_name}}/derive/src/: attribute.rs  derive_enum.rs  derive_struct.rs  lib.rs
{{cookiecutter.project_name}}/derive/src/{{cookiecutter.derive_attribute_name}}/: attribute.rs  derive_enum.rs  derive_struct.rs
{{cookiecutter.project_name}}/src/: lib.rs
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.rs
