[package]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
authors = [
    "{{cookiecutter.author_name}} <{{cookiecutter.email}}>"
]
edition = "2021"

[workspace]
members = [
    "derive"
]

[features]
derive = ["{{cookiecutter.project_slug}}_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{{cookiecutter.project_slug}}_derive = { path = "derive", version = "0.1.0", optional = true }
thiserror = "*"

[dev-dependencies]
{{cookiecutter.project_slug}}_derive = { path = "derive", version = "0.1.0" }
