[package]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
authors = [
    "{{cookiecutter.author_name}} <{{cookiecutter.email}}>"
]
edition = "2021"
description = "{{cookiecutter.description}}"
repository = "https://{{cookiecutter.code_hosting}}.com/{{cookiecutter.code_hosting_username}}/{{cookiecutter.project_name}}"
homepage = "https://{{cookiecutter.code_hosting}}.com/{{cookiecutter.code_hosting_username}}/{{cookiecutter.project_name}}"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
]
keywords = [
    "{{cookiecutter.project_name}}",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "derive"
]

[profile.dev]
opt-level = 1
overflow-checks = false

[features]
derive = ["{{cookiecutter.project_slug}}_derive"]

[dependencies]
{{cookiecutter.project_slug}}_derive = { path = "derive", version = "{{cookiecutter.version}}", optional = true }
thiserror = "1.0"

[dev-dependencies]
{{cookiecutter.project_slug}}_derive = { path = "derive", version = "{{cookiecutter.version}}" }
