[package]
name = "{{cookiecutter.project_slug}}_derive"
version = "{{cookiecutter.version}}"
authors = [
    "{{cookiecutter.author_name}} <{{cookiecutter.email}}>"
]
edition = "2021"
description = "{{cookiecutter.description}}"
repository = "https://{{cookiecutter.code_hosting}}.com/{{cookiecutter.code_hosting_username}}/{{cookiecutter.project_name}}"
homepage = "https://{{cookiecutter.code_hosting}}.com/{{cookiecutter.code_hosting_username}}/{{cookiecutter.project_name}}"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
]
keywords = [
    "{{cookiecutter.project_name}}",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "../examples/*",
    "Cargo.toml",
    "LICENSE*",
    "../README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
virtue = "0.0"
